# airelogic_tech_test

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: __init__.py
api/base/endpoints/: average.py  index.py
api/base/interfaces/: lyricsovh.py  musicbrainz.py
api/base/libs/: artist.py
api/base/models/: apimodels.py  lyricsovhmodels.py  musicbrainzmodels.py
tests/: test_api.py
