[tool.poetry]
name = "airelogic_tech_test"
version = "0.1.0"
description = ""
authors = ["Nathan Wall <me@nathanwall.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"
pylint = "^2.13.9"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
